# lvgl_learn

./: .gitignore  CMakeLists.txt  LVGL_LEARNING_PATH.md  README.md  lv_conf.h  setup.sh
src/: RED.c  freetype_example.c  freetype_example.h  lvgl_port.c  lvgl_port.h  lvgl_sim.h  main.c  sdl_monitor.c  sdl_monitor.h  ui_elements.c  ui_elements.h
